2010-01-18  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* RichTextBox.cs: SelectedText should set Modified to true. Observe
	that this is happening just here, not for the Text property, and
	neither for the TextBoxBase impl.
	Fixes #569950.

2010-01-10  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolStripMenuItem.cs: Put the Checked/CheckState logic in a single
	place and synchronize the events properly. Fixes a lack of
	coordination between the events - which should be fired together.

2010-01-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TrackBar.cs: Move our events code to a single method, allowing it to
	optionally fire the Scroll event. This way we both avoid the
	duplicated calls to OnScroll and also will be able to fire Scroll
	*before* OnValueChanged in other places.
	Fixes #568026.

2010-01-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* RadioButton.cs: When drawing, if Appearance is Button use the old
	normal routine in the theme engine, instead of using the one in 2.0,
	since this last one doesn't support proper rendering of the control as
	a button.
	Fixes #567904.

2010-01-03  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* GroupBoxRenderer.cs: Properly use SystemColors.GrayText to draw to
	text of the group box if it is disabled.
	Fixes #567847.

2009-12-15  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Control.cs: When changing the cursor and updating it, do update the
	cursor immediately even if there's a child control under the current
	cursor position - this is exactly what .net does.
	Fixes #555780.

2009-11-19  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGrid.cs: In OnLeave, do cancel or end current edit, depending on
	the commit_new_row value, instead of just trying to cancel if a new
	row had been added. This is important when modifying existing rows and
	then moving the focus out of the control.

2009-11-17  Carlos Alberto Cortez <calberto.cortez@gmail.com>
