@@ -2522,11 +2522,11 @@ namespace System.Windows.Forms
 				else { // DropDown or DropDownList
 					
 					width = owner.DropDownWidth;
-					int count = (owner.Items.Count <= owner.MaxDropDownItems) ? owner.Items.Count : owner.MaxDropDownItems;
+					int visible_items_count = (owner.Items.Count <= owner.MaxDropDownItems) ? owner.Items.Count : owner.MaxDropDownItems;
 					
 					if (owner.DrawMode == DrawMode.OwnerDrawVariable) {
 						height = 0;
-						for (int i = 0; i < count; i++) {
+						for (int i = 0; i < visible_items_count; i++) {
 							height += owner.GetItemHeight (i);
 						}
 
@@ -2535,14 +2535,15 @@ namespace System.Windows.Forms
 					} else	{
 #if NET_2_0
 						if (owner.DropDownHeight == default_drop_down_height) { // ignore DropDownHeight
-							height = owner.ItemHeight * count;
+							height = owner.ItemHeight * visible_items_count;
 							show_scrollbar = owner.Items.Count > owner.MaxDropDownItems;
 						} else {
+							// ignore visible items count, and use manual height instead
 							height = owner.DropDownHeight;
-							show_scrollbar = (count * owner.ItemHeight) > height;
+							show_scrollbar = (owner.Items.Count * owner.ItemHeight) > height;
 						}
 #else		
-						height = owner.ItemHeight * count;
+						height = owner.ItemHeight * visible_items_count;
 						show_scrollbar = owner.Items.Count > owner.MaxDropDownItems;
 #endif
 					}
